--- a/default.project.json
+++ b/default.project.json
@@ -9,6 +9,9 @@
       },
       "Packages": {
         "$path": "Packages"
+      },
+      "Test": {
+        "$path": "src/test"
       }
     },
 
