- Added savestate support - Added API class that detects and loads mapper from ROM data

--- a/default.project.json
+++ b/default.project.json
@@ -15,6 +15,9 @@
       },
       "Roms": {
         "$path": "roms"
+      },
+      "Savestates": {
+        "$path": "savestates"
       }
     },
 
