--- a/default.project.json
+++ b/default.project.json
@@ -32,6 +32,9 @@
         "Client": {
           "$path": "src/client"
         }
+      },
+      "$properties": {
+        "EnableMouseLockOption": false
       }
     },
 
