Added actor for parallelization

--- a/default.project.json
+++ b/default.project.json
@@ -29,8 +29,11 @@
 
     "StarterPlayer": {
       "StarterPlayerScripts": {
-        "Client": {
-          "$path": "src/client"
+        "Actor": {
+          "Client": {
+            "$path": "src/client"
+          },
+          "$className": "Actor"
         }
       },
       "$properties": {
